--- a/content/9月.md
+++ b/content/9月.md
@@ -1,7 +1,7 @@
 Title: 2014 8月学习计划
 Date: 2014-8-31 16:20
 Category: 学习计划
-Tags: plan, 学习
+Tags: plan, 学习, ffpython
 Slug: 9
 Author: dragondjf
 Summary: 完成blog搭建，学习ffpython, 做好QSetup
